add comments to html code

--- a/US_Unemployment/templates/demographics.html
+++ b/US_Unemployment/templates/demographics.html
@@ -36,6 +36,7 @@
             </ul>
         </div>
     </nav>
+    <!-- Tableau Container-->
     <div class="container">
         <div class='tableauPlaceholder' id='viz1591895137721' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;US_Unemployment_2015_2020&#47;Unemployment-Study&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='US_Unemployment_2015_2020&#47;Unemployment-Study' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;US_Unemployment_2015_2020&#47;Unemployment-Study&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>
         <script type='text/javascript'>
@@ -51,7 +52,7 @@
         </script>
     </div>
 </body>
-<!-- Footer -->
+
 <!-- Footer -->
 <footer class="footer">
     <div>
@@ -64,6 +65,7 @@
         </ul>
     </div>
 </footer>
+<!-- Bootstrap JavaScript -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
