--- a/US_Unemployment/templates/index.html
+++ b/US_Unemployment/templates/index.html
@@ -6,28 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>US Unemployment</title>
-    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> -->
 
     <!-- Leaflet CSS & JS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
-    <!-- <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script> -->
 
     <!--D3 cdn-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js"></script>
-
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- Load an icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!--CSS Link-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     </script>
-    <!-- <link rel="stylesheet" href="static/css/style.css"> -->
-
-
 </head>
 
 <body>
@@ -52,13 +47,16 @@
         </div>
     </nav>
 
+    <!-- Container for Plots, RSS, and Dropdowns -->
     <div class="container-fluid">
         <div class="row" style="margin: 20px;">
             <div class="col-md-12 row" style="height: fit-content; width:fit-content">
+                <!-- States dropdown -->
                 <div class="states">
                     <h6>State:</h6>
                     <select id="selState"></select>
                 </div>
+                <!-- Year dropdown -->
                 <div class="years">
                     <h6>Year:</h6>
                     <select id="selYear"></select>
@@ -66,9 +64,11 @@
             </div>
         </div>
         <div class="row">
+            <!-- Map Chorpleth -->
             <div class="col-md-7">
                 <div id="map" style="width: 100%; height: 800px; "></div>
             </div>
+            <!-- Bar plot -->
             <div class="col-md-5">
                 <div id="bar" style="width: 70%; height: auto;"></div>
                 <h6 style="text-align:center">Latest Unemployment News </h6>
@@ -92,29 +92,21 @@
     </div>
 </footer>
 
-<!-- Leaflet plotly -->
-<script src="https://cdn.plot.ly/plotly-latest.min.js "></script>
+<!-- PLotly JavaScript -->
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <!-- Leaflet JavaScript -->
-<script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js "></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js "></script>
-
-<!-- <script src="{{ url_for( 'static', filename='js/us-states.js' ) }} "></script> -->
-
-<!-- 
-    <script type="text/javascript " src="static/js/config.js "></script>
-  <script type="text/javascript " src="static/js/logic.js "></script> -->
-<!-- Bootstrap JS -->
-
-
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="anonymous "></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="anonymous "></script>
-<script src="https://cdn.plot.ly/plotly-latest.min.js "></script>
+<script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
+<!-- D3 JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js"></script>
+<!-- Bootstrap JavaScript  -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <!-- Our JavaScript -->
-<script src="{{ url_for( 'static', filename='js/choropleth.js' ) }} "></script>
-<script src="{{ url_for( 'static', filename='js/config.js' ) }} "></script>
-<script src="{{ url_for( 'static', filename='js/us-states.js' ) }} "></script>
-<script src="{{ url_for( 'static', filename='js/app.js' ) }} "></script>
+<script src="{{ url_for('static', filename='js/choropleth.js') }}"></script>
+<script src="{{ url_for('static', filename='js/config.js') }}"></script>
+<script src="{{ url_for('static', filename='js/us-states.js') }}"></script>
+<script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
 
 </html>
